# gryphon-stats.old

./: CMakeLists.txt  README.md
include/: TAnisotropyCombo.h  TAverageFlux.h  TData.h  TElectrons.h  TFitElectrons.h  TFitPositrons.h  TFitProtons.h  TPositrons.h  TProtons.h  TSecondary.h  Utilities.h
projects/: PRL_outputs.cpp  combine_outputs.cpp  nuclei_outputs.cpp
src/: TAnisotropyCombo.cpp  TAverageFlux.cpp  TData.cpp  TElectrons.cpp  TFitElectrons.cpp  TFitPositrons.cpp  TFitProtons.cpp  TPositrons.cpp  TProtons.cpp  TSecondary.cpp  Utilities.cpp
